Add a new ButtonDialog
Bug: 379036632
Change-Id: I14998b07c75a63467f227fa075b7e7891994bb47
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6023182
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Nancy Li <nancyly@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -2180,9 +2180,11 @@ grd_files_debug_sources = [
   "front_end/ui/components/data_grid/DataGridUtils.js",
   "front_end/ui/components/data_grid/dataGrid.css.js",
   "front_end/ui/components/data_grid/dataGridController.css.js",
+  "front_end/ui/components/dialogs/ButtonDialog.js",
   "front_end/ui/components/dialogs/Dialog.js",
   "front_end/ui/components/dialogs/IconDialog.js",
   "front_end/ui/components/dialogs/ShortcutDialog.js",
+  "front_end/ui/components/dialogs/buttonDialog.css.js",
   "front_end/ui/components/dialogs/dialog.css.js",
   "front_end/ui/components/dialogs/iconDialog.css.js",
   "front_end/ui/components/dialogs/shortcutDialog.css.js",
