[RPP] Show throttling and device emulation in trace history dropdown
Also removes the duration and time.

https://i.imgur.com/k0otYyv.png

Bug: 311438203
Change-Id: I813eddb7e3e77d1e3c387ad8201ffa42d3dd4ca8
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6035852
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Connor Clark <cjamcl@chromium.org>
Auto-Submit: Connor Clark <cjamcl@chromium.org>

--- a/front_end/models/trace/types/BUILD.gn
+++ b/front_end/models/trace/types/BUILD.gn
@@ -16,7 +16,10 @@ devtools_module("types") {
     "TraceEvents.ts",
   ]
 
-  deps = [ "../../../generated" ]
+  deps = [
+    "../../../core/sdk:bundle",
+    "../../../generated",
+  ]
 }
 
 devtools_entrypoint("bundle") {
