--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -88,6 +88,7 @@ grd_files_release_sources = [
   "front_end/Images/console-conditional-breakpoint.svg",
   "front_end/Images/console-logpoint.svg",
   "front_end/Images/cookie.svg",
+  "front_end/Images/cookie_off.svg",
   "front_end/Images/copy.svg",
   "front_end/Images/corporate-fare.svg",
   "front_end/Images/credit-card.svg",
