--- a/config/gni/devtools_image_files.gni
+++ b/config/gni/devtools_image_files.gni
@@ -92,6 +92,7 @@ devtools_svg_sources = [
   "console-conditional-breakpoint.svg",
   "console-logpoint.svg",
   "cookie.svg",
+  "cookie_off.svg",
   "copy.svg",
   "corporate-fare.svg",
   "credit-card.svg",
