[RPP] Create new component for the summary pane
This replaces the pie chart with a bar representation.

https://screencast.googleplex.com/cast/NTQ3MjYzMDY2MzU0NDgzMnxiODA1MzkxYy0xMQ

Bug:378171303,368337883
Change-Id: Ia3d7a0bda3a2195e562e4edbd260ce7c252897b7
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6012905
Reviewed-by: Adam Raine <asraine@chromium.org>
Commit-Queue: Adriana Ixba <aixba@chromium.org>

--- a/front_end/panels/timeline/components/BUILD.gn
+++ b/front_end/panels/timeline/components/BUILD.gn
@@ -24,6 +24,7 @@ generate_css("css_files") {
     "sidebarAnnotationsTab.css",
     "sidebarInsightsTab.css",
     "sidebarSingleInsightSet.css",
+    "timelineSummary.css",
   ]
 }
 
@@ -47,6 +48,7 @@ devtools_module("components") {
     "SidebarAnnotationsTab.ts",
     "SidebarInsightsTab.ts",
     "SidebarSingleInsightSet.ts",
+    "TimelineSummary.ts",
     "Utils.ts",
   ]
 
@@ -118,6 +120,7 @@ ts_library("unittests") {
     "SidebarAnnotationsTab.test.ts",
     "SidebarInsightsTab.test.ts",
     "SidebarSingleInsightSet.test.ts",
+    "TimelineSummary.test.ts",
     "Utils.test.ts",
   ]
 
