--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1831,6 +1831,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/SidebarAnnotationsTab.js",
   "front_end/panels/timeline/components/SidebarInsightsTab.js",
   "front_end/panels/timeline/components/SidebarSingleInsightSet.js",
+  "front_end/panels/timeline/components/TimelineSummary.js",
   "front_end/panels/timeline/components/Utils.js",
   "front_end/panels/timeline/components/breadcrumbsUI.css.js",
   "front_end/panels/timeline/components/cpuThrottlingSelector.css.js",
@@ -1867,6 +1868,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/sidebarAnnotationsTab.css.js",
   "front_end/panels/timeline/components/sidebarInsightsTab.css.js",
   "front_end/panels/timeline/components/sidebarSingleInsightSet.css.js",
+  "front_end/panels/timeline/components/timelineSummary.css.js",
   "front_end/panels/timeline/extensions/ExtensionUI.js",
   "front_end/panels/timeline/historyToolbarButton.css.js",
   "front_end/panels/timeline/overlays/OverlaysImpl.js",
