[RPP] Modify text under "Environment settings"
Also:

* move the `md` helper up a bit in order to be used by this module
* change parameter type for `md` to be a localized string, to enforce
  requirement that input is well-known

Bug: 311438203
Change-Id: I775df05f0cf341f767a1cd46f7c189cc107dde3e
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6039875
Auto-Submit: Connor Clark <cjamcl@chromium.org>
Reviewed-by: Adam Raine <asraine@chromium.org>
Commit-Queue: Adam Raine <asraine@chromium.org>

--- a/front_end/panels/timeline/utils/BUILD.gn
+++ b/front_end/panels/timeline/utils/BUILD.gn
@@ -27,6 +27,8 @@ devtools_module("utils") {
     "../../../models/timeline_model:bundle",
     "../../../models/trace:bundle",
     "../../../models/workspace:bundle",
+    "../../../third_party/marked:bundle",
+    "../../../ui/components/markdown_view:bundle",
     "../../../ui/legacy:bundle",
   ]
 }
