[AI Assistance] Add test for correct iframe
Fixed: 368523861
Change-Id: I8258e512df4c579d4f066f4e1689af9b8aceb675
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6039219
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Nikolay Vitkov <nvitkov@chromium.org>

--- a/test/e2e/resources/BUILD.gn
+++ b/test/e2e/resources/BUILD.gn
@@ -17,6 +17,7 @@ group("resources") {
     "elements",
     "emulation",
     "extensions",
+    "freestyler",
     "host",
     "inline_editor",
     "issues",
