Update shortcut dialog to use new ButtonDialog component
Bug: 379036632
Change-Id: I611a2b99febfa99043a4b42ef1141d6370ba8510
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6023184
Reviewed-by: Alina Varkki <alinavarkki@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Nancy Li <nancyly@chromium.org>

--- a/front_end/ui/components/docs/dialog/BUILD.gn
+++ b/front_end/ui/components/docs/dialog/BUILD.gn
@@ -10,6 +10,7 @@ ts_library("ts") {
   sources = [
     "basic.ts",
     "button_dialog.ts",
+    "shortcut_dialog.ts",
   ]
 
   deps = [
@@ -24,6 +25,7 @@ copy_to_gen("dialog") {
   sources = [
     "basic.html",
     "button_dialog.html",
+    "shortcut_dialog.html",
   ]
   deps = [ ":ts" ]
 }
