[RPP Observations] Warn if LCP increases due to emulation changes
Bug: 360379617
Change-Id: Ib9ff899faf78cc3181f17616192dc8ad8a8dc008
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6043070
Commit-Queue: Adam Raine <asraine@chromium.org>
Reviewed-by: Connor Clark <cjamcl@chromium.org>

--- a/front_end/models/live-metrics/BUILD.gn
+++ b/front_end/models/live-metrics/BUILD.gn
@@ -13,6 +13,7 @@ devtools_module("live-metrics") {
     "../../core/host:bundle",
     "../../core/sdk:bundle",
     "../../generated:protocol",
+    "../emulation:bundle",
     "./web-vitals-injected:web-vitals-injected",
     "./web-vitals-injected/spec:bundle",
   ]
