Update request sent to AIDA to use new fields current_message and historical_contexts
Bug: 379074152
Change-Id: I38147da812b2b3c5f6b92a9932c5f9c4ca018ca0
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6040796
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Samiya Caur <samiyac@chromium.org>

--- a/test/e2e/freestyler/BUILD.gn
+++ b/test/e2e/freestyler/BUILD.gn
@@ -8,6 +8,7 @@ node_ts_library("freestyler") {
   sources = [ "freestyler_test.ts" ]
 
   deps = [
+    "../../../front_end/core/host:bundle",
     "../../../front_end/core/root:bundle",
     "../../shared",
     "../helpers",
