[RPP] Display network recommendation in Perf panel toolbar
This required significant refactors to CrUXManager/LiveMetricView,
moving all the state to the CrUXManager so that it can also be
used from TimelinePanel.

Bug: 311438203
Change-Id: Ic67b4bf0362955dbbddf3df7a2cb2800daa3c12d
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6044331
Auto-Submit: Connor Clark <cjamcl@chromium.org>
Reviewed-by: Adam Raine <asraine@chromium.org>
Commit-Queue: Connor Clark <cjamcl@chromium.org>

--- a/front_end/models/emulation/BUILD.gn
+++ b/front_end/models/emulation/BUILD.gn
@@ -34,6 +34,7 @@ devtools_entrypoint("bundle") {
     ":*",
     "../*",
     "../../panels/emulation/*",
+    "../crux-manager/*",
   ]
 
   visibility += devtools_models_visibility
