--- a/front_end/panels/timeline/utils/BUILD.gn
+++ b/front_end/panels/timeline/utils/BUILD.gn
@@ -23,10 +23,12 @@ devtools_module("utils") {
     "../../../core/sdk:bundle",
     "../../../generated",
     "../../../models/bindings:bundle",
+    "../../../models/crux-manager:bundle",
     "../../../models/source_map_scopes:bundle",
     "../../../models/timeline_model:bundle",
     "../../../models/trace:bundle",
     "../../../models/workspace:bundle",
+    "../../../panels/mobile_throttling:bundle",
     "../../../third_party/marked:bundle",
     "../../../ui/components/markdown_view:bundle",
     "../../../ui/legacy:bundle",
