--- a/front_end/models/crux-manager/BUILD.gn
+++ b/front_end/models/crux-manager/BUILD.gn
@@ -12,6 +12,7 @@ devtools_module("crux-manager") {
   deps = [
     "../../core/common:bundle",
     "../../core/sdk:bundle",
+    "../emulation:bundle",
   ]
 }
 
