[RPP] Replace timings markers with new ones
This creates a new overlay for LCP, Nav, and FCP timings events as per
UI mocks. CLS and INP will be added on a follow-up.

This includes making these markers clickable, and hoverable with a
tooltip.

https://screencast.googleplex.com/cast/NTUwNjQ1Nzk0MzQwODY0MHw5NTExYWE1Zi0zYQ

Bug:374191612
Change-Id: I412f7fe896adf453b53efce7f41bb0dcf4c1307f
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6001801
Commit-Queue: Adriana Ixba <aixba@chromium.org>
Reviewed-by: Connor Clark <cjamcl@chromium.org>

--- a/front_end/panels/timeline/utils/BUILD.gn
+++ b/front_end/panels/timeline/utils/BUILD.gn
@@ -47,6 +47,7 @@ devtools_entrypoint("bundle") {
     "../../network/*",
     "../components:*",
     "../components/insights:*",
+    "../overlays/*",
 
     # only for use in tests
     "../../../models/trace/handlers/*",
