--- a/front_end/panels/timeline/overlays/BUILD.gn
+++ b/front_end/panels/timeline/overlays/BUILD.gn
@@ -15,6 +15,7 @@ devtools_module("overlays") {
     "../../../services/trace_bounds:bundle",
     "../../../ui/legacy/components/perf_ui:bundle",
     "../../../ui/lit-html:bundle",
+    "../../timeline/utils:bundle",
     "./components:bundle",
   ]
 }
