[RPP Observations] Use list widget for origin mapping
Pros:
- Existing entries can be edited
- New entry values can be pre-filled
- Input fields can be validated individually
- Cancel button when adding/editing an entry
- Don't need to click "Ok" for changes to take affect

Cons:
- The header row is somewhat hacky
- No good way to check for CrUX data before an entry is added

Before:
https://screenshot.googleplex.com/AvRqQG9eHf35NBz

After:
https://screenshot.googleplex.com/6SbmNB9HgSi6Jq9

Bug: 362252927
Change-Id: Id0b5e0d266083d3aa4f8df1b23ef67154f459940
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5824581
Commit-Queue: Adam Raine <asraine@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/front_end/panels/timeline/components/BUILD.gn
+++ b/front_end/panels/timeline/components/BUILD.gn
@@ -20,6 +20,7 @@ generate_css("css_files") {
     "networkRequestDetails.css",
     "networkRequestTooltip.css",
     "networkThrottlingSelector.css",
+    "originMap.css",
     "relatedInsightChips.css",
     "sidebarAnnotationsTab.css",
     "sidebarInsightsTab.css",
@@ -43,6 +44,7 @@ devtools_module("components") {
     "NetworkRequestDetails.ts",
     "NetworkRequestTooltip.ts",
     "NetworkThrottlingSelector.ts",
+    "OriginMap.ts",
     "RelatedInsightChips.ts",
     "Sidebar.ts",
     "SidebarAnnotationsTab.ts",
@@ -115,6 +117,7 @@ ts_library("unittests") {
     "MetricCard.test.ts",
     "NetworkRequestDetails.test.ts",
     "NetworkThrottlingSelector.test.ts",
+    "OriginMap.test.ts",
     "RelatedInsightChips.test.ts",
     "Sidebar.test.ts",
     "SidebarAnnotationsTab.test.ts",
