--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1827,6 +1827,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/NetworkRequestDetails.js",
   "front_end/panels/timeline/components/NetworkRequestTooltip.js",
   "front_end/panels/timeline/components/NetworkThrottlingSelector.js",
+  "front_end/panels/timeline/components/OriginMap.js",
   "front_end/panels/timeline/components/RelatedInsightChips.js",
   "front_end/panels/timeline/components/Sidebar.js",
   "front_end/panels/timeline/components/SidebarAnnotationsTab.js",
@@ -1865,6 +1866,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/networkRequestDetails.css.js",
   "front_end/panels/timeline/components/networkRequestTooltip.css.js",
   "front_end/panels/timeline/components/networkThrottlingSelector.css.js",
+  "front_end/panels/timeline/components/originMap.css.js",
   "front_end/panels/timeline/components/relatedInsightChips.css.js",
   "front_end/panels/timeline/components/sidebarAnnotationsTab.css.js",
   "front_end/panels/timeline/components/sidebarInsightsTab.css.js",
