[RPP] Add CrUX field data to trace metadata
Bug: 311438203
Change-Id: I7ee7e03fed64f7fe34ecb41fc716cb0e688b058d
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6051077
Reviewed-by: Adam Raine <asraine@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Connor Clark <cjamcl@chromium.org>

--- a/front_end/models/trace/types/BUILD.gn
+++ b/front_end/models/trace/types/BUILD.gn
@@ -19,6 +19,7 @@ devtools_module("types") {
   deps = [
     "../../../core/sdk:bundle",
     "../../../generated",
+    "../../crux-manager:bundle",
   ]
 }
 
