[RPP] Add FlowsHandler to parse flows in traces
A flow is a logic connection between trace events. We display this
connection as arrows between trace events belonging to the same flow.

In the trace event format, flows are represented with pairing "flow
phase" events. Each flow phase event corresponds to one trace event
and indicates the role a trace event plays in a flow (start, step or
end).

To parse flows, we first handle flow phase events, by creating unique
flows with the timestamps of each phase. Then, we place trace events
in the flow where their corresponding phase event was placed (if a
corresponding flow phase event does exist).

In a follow up CL, I'll add flows exported by the flows handler to the
InitiatorsHandler.

Bug: 381033695
Change-Id: Idf00526dc96614e3c83cc4bdced076e59b10d6fd
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6049061
Commit-Queue: Andres Olivares <andoli@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/models/trace/handlers/BUILD.gn
+++ b/front_end/models/trace/handlers/BUILD.gn
@@ -12,6 +12,7 @@ devtools_module("handlers") {
     "AnimationHandler.ts",
     "AuctionWorkletsHandler.ts",
     "ExtensionTraceDataHandler.ts",
+    "FlowsHandler.ts",
     "FramesHandler.ts",
     "GPUHandler.ts",
     "ImagePaintingHandler.ts",
@@ -67,6 +68,7 @@ ts_library("unittests") {
     "AnimationHandler.test.ts",
     "AuctionWorkletsHandler.test.ts",
     "ExtensionTraceDataHandler.test.ts",
+    "FlowsHandler.test.ts",
     "FramesHandler.test.ts",
     "GPUHandler.test.ts",
     "ImagePaintingHandler.test.ts",
