[RPP Icicle blowtorch] Add a dialog for ignore list in RPP
Now it only has the basic UI, and only allows users to toggle ignore list rules.
More features will be added in the future CLs.

Screencast: https://screencast.googleplex.com/cast/NDg4MDU3MzgzNDE5OTA0MHxkZTkzMDYyNi05NQ
Bug: 376658252
Change-Id: I152bcdb77d28a33f05bd4585061e287a18937511
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6037604
Commit-Queue: Nancy Li <nancyly@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -85,6 +85,7 @@ grd_files_release_sources = [
   "front_end/Images/colon.svg",
   "front_end/Images/color-picker-filled.svg",
   "front_end/Images/color-picker.svg",
+  "front_end/Images/compress.svg",
   "front_end/Images/console-conditional-breakpoint.svg",
   "front_end/Images/console-logpoint.svg",
   "front_end/Images/cookie.svg",
@@ -1821,6 +1822,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/CPUThrottlingSelector.js",
   "front_end/panels/timeline/components/DetailsView.js",
   "front_end/panels/timeline/components/FieldSettingsDialog.js",
+  "front_end/panels/timeline/components/IgnoreListSetting.js",
   "front_end/panels/timeline/components/InteractionBreakdown.js",
   "front_end/panels/timeline/components/LayoutShiftDetails.js",
   "front_end/panels/timeline/components/LiveMetricsView.js",
@@ -1840,6 +1842,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/breadcrumbsUI.css.js",
   "front_end/panels/timeline/components/cpuThrottlingSelector.css.js",
   "front_end/panels/timeline/components/fieldSettingsDialog.css.js",
+  "front_end/panels/timeline/components/ignoreListSetting.css.js",
   "front_end/panels/timeline/components/insights/BaseInsightComponent.js",
   "front_end/panels/timeline/components/insights/CLSCulprits.js",
   "front_end/panels/timeline/components/insights/DocumentLatency.js",
