--- a/front_end/panels/timeline/components/BUILD.gn
+++ b/front_end/panels/timeline/components/BUILD.gn
@@ -12,6 +12,7 @@ generate_css("css_files") {
     "breadcrumbsUI.css",
     "cpuThrottlingSelector.css",
     "fieldSettingsDialog.css",
+    "ignoreListSetting.css",
     "interactionBreakdown.css",
     "layoutShiftDetails.css",
     "liveMetricsView.css",
@@ -36,6 +37,7 @@ devtools_module("components") {
     "CPUThrottlingSelector.ts",
     "DetailsView.ts",
     "FieldSettingsDialog.ts",
+    "IgnoreListSetting.ts",
     "InteractionBreakdown.ts",
     "LayoutShiftDetails.ts",
     "LiveMetricsView.ts",
@@ -110,6 +112,7 @@ ts_library("unittests") {
     "BreadcrumbsUI.test.ts",
     "CPUThrottlingSelector.test.ts",
     "FieldSettingsDialog.test.ts",
+    "IgnoreListSetting.test.ts",
     "InteractionBreakdown.test.ts",
     "Invalidations.test.ts",
     "LayoutShiftDetails.test.ts",
