--- a/front_end/panels/timeline/fixtures/traces/BUILD.gn
+++ b/front_end/panels/timeline/fixtures/traces/BUILD.gn
@@ -100,6 +100,7 @@ copy_to_gen("traces") {
     "user-timings-complex.json.gz",
     "user-timings-details.json.gz",
     "user-timings.json.gz",
+    "web-dev-animation-frames.json.gz",
     "web-dev-initial-url.json.gz",
     "web-dev-modifications.json.gz",
     "web-dev-outermost-frames.json.gz",
