--- a/front_end/models/trace/handlers/BUILD.gn
+++ b/front_end/models/trace/handlers/BUILD.gn
@@ -10,6 +10,7 @@ import("../../visibility.gni")
 devtools_module("handlers") {
   sources = [
     "AnimationHandler.ts",
+    "AsyncCallStacksHandler.ts",
     "AuctionWorkletsHandler.ts",
     "ExtensionTraceDataHandler.ts",
     "FlowsHandler.ts",
@@ -66,6 +67,7 @@ ts_library("unittests") {
 
   sources = [
     "AnimationHandler.test.ts",
+    "AsyncCallStacksHandler.test.ts",
     "AuctionWorkletsHandler.test.ts",
     "ExtensionTraceDataHandler.test.ts",
     "FlowsHandler.test.ts",
