[RPP] Generalize JS async call initiator relationships
By using the output of the AsyncCallStacksHandler. One noticeable change
from the UI is that since we don't need specific JS entrypoints for
these events (setTimeout: InstallTimer -> TimerFire, rAF:
RequestAnimationFrame -> AnimationFrameFired, etc.), the initiated
arrows now follow this pattern:

js call -> FunctionCall. Where js call is the profile call for the
scheduling function (e.g. setTimeout or requestAnimationFrame) and
FunctionCall is the entry point for the JS task that was scheduled.

I'd argue an improvement because we are consistent across JS
schedulers, without the need for specific entrypoints for each
scheduler.

Bug: 381391955
Change-Id: I687b2c00104dde8d942b68508cfca0f072224499
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6054289
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Andres Olivares <andoli@chromium.org>

--- a/front_end/panels/timeline/fixtures/traces/BUILD.gn
+++ b/front_end/panels/timeline/fixtures/traces/BUILD.gn
@@ -8,6 +8,7 @@ copy_to_gen("traces") {
   sources = [
     "about-blank-first.json.gz",
     "animation.json.gz",
+    "async-js-calls.json.gz",
     "basic-stack.json.gz",
     "basic.cpuprofile.gz",
     "basic.json.gz",
@@ -58,7 +59,6 @@ copy_to_gen("traces") {
     "multiple-navigations-with-iframes.json.gz",
     "multiple-navigations.json.gz",
     "multiple-top-level-renderers.json.gz",
-    "nested-initiators.json.gz",
     "nested-interactions.json.gz",
     "network-requests-initiators.json.gz",
     "network-websocket-messages.json.gz",
@@ -83,7 +83,6 @@ copy_to_gen("traces") {
     "selector-stats-frame-test.json.gz",
     "selector-stats.json.gz",
     "server-timings.json.gz",
-    "set-timeout-long-task.json.gz",
     "shift-attribution.json.gz",
     "simple-js-program.json.gz",
     "slow-interaction-button-click.json.gz",
