Update link for bugs
The npm bugs command opens a new issue to be reported to DevTools.
Use the link from the read-me

Bug: none
Change-Id: I72095baaf374fc21904299b17a85470de92b24f5
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6063660
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "The Chromium Authors",
-  "bugs": "https://issues.chromium.org/issues?q=status:open componentid:1457055+",
+  "bugs": "http://goo.gle/devtools-bugs",
   "description": "Chrome DevTools UI",
   "homepage": "https://devtools.chrome.com",
   "keywords": [
