[RPP] rename AsyncCallStacksHandler -> AsyncJSCallsHandler
Since that's more specific: the handler doesn't extract stack traces,
only async calls, and also it only does it for JS async calls.

Bug: 381391955
Change-Id: Id1a68275eacafd8ddb8d54a47db72a0ea5bd3623
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6070370
Auto-Submit: Andres Olivares <andoli@chromium.org>
Commit-Queue: Nancy Li <nancyly@chromium.org>
Reviewed-by: Nancy Li <nancyly@chromium.org>

--- a/front_end/models/trace/handlers/BUILD.gn
+++ b/front_end/models/trace/handlers/BUILD.gn
@@ -11,7 +11,7 @@ devtools_module("handlers") {
   sources = [
     "AnimationFramesHandler.ts",
     "AnimationHandler.ts",
-    "AsyncCallStacksHandler.ts",
+    "AsyncJSCallsHandler.ts",
     "AuctionWorkletsHandler.ts",
     "ExtensionTraceDataHandler.ts",
     "FlowsHandler.ts",
@@ -69,7 +69,7 @@ ts_library("unittests") {
   sources = [
     "AnimationFramesHandler.test.ts",
     "AnimationHandler.test.ts",
-    "AsyncCallStacksHandler.test.ts",
+    "AsyncJSCallsHandler.test.ts",
     "AuctionWorkletsHandler.test.ts",
     "ExtensionTraceDataHandler.test.ts",
     "FlowsHandler.test.ts",
