[cleanup] Remove dead code
The infra now all uses `npm run lint` for linting.
Moves a common function to the only place it's used.

Bug: none
Change-Id: Ibcf86daa95e33d8b313efe76a6173436769786d5
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6070376
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>
Auto-Submit: Nikolay Vitkov <nvitkov@chromium.org>
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>

--- a/scripts/component_server/BUILD.gn
+++ b/scripts/component_server/BUILD.gn
@@ -7,8 +7,5 @@ import("../build/ninja/copy.gni")
 copy_to_gen("component_server") {
   sources = [ "server.js" ]
 
-  deps = [
-    "../../front_end/ui/legacy:copy_stylesheets_for_server",
-    "../test",
-  ]
+  deps = [ "../../front_end/ui/legacy:copy_stylesheets_for_server" ]
 }
