--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1046,6 +1046,7 @@ grd_files_debug_sources = [
   "front_end/models/trace/extras/FilmStrip.js",
   "front_end/models/trace/extras/MainThreadActivity.js",
   "front_end/models/trace/extras/Metadata.js",
+  "front_end/models/trace/extras/StackTraceForEvent.js",
   "front_end/models/trace/extras/ThirdParties.js",
   "front_end/models/trace/extras/TimelineJSProfile.js",
   "front_end/models/trace/extras/TraceFilter.js",
