Add polyfill with subclass `MapWithDefault`
This CL adds `MapWithDefault`, which is `Map` with methods for upsert.
See https://github.com/tc39/proposal-upsert

Bug: none
Change-Id: I5b42155d678c47d0cc6b671bc71391b91eccf886
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6068031
Commit-Queue: Ken Okada <kenoss@chromium.org>
Reviewed-by: Danil Somsikov <dsv@chromium.org>
Commit-Queue: Simon Zünd <szuend@chromium.org>
Auto-Submit: Ken Okada <kenoss@chromium.org>
Reviewed-by: Simon Zünd <szuend@chromium.org>
Commit-Queue: Danil Somsikov <dsv@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -762,6 +762,7 @@ grd_files_debug_sources = [
   "front_end/core/common/JavaScriptMetaData.js",
   "front_end/core/common/Lazy.js",
   "front_end/core/common/Linkifier.js",
+  "front_end/core/common/MapWithDefault.js",
   "front_end/core/common/Mutex.js",
   "front_end/core/common/Object.js",
   "front_end/core/common/ParsedURL.js",
