--- a/front_end/core/common/BUILD.gn
+++ b/front_end/core/common/BUILD.gn
@@ -24,6 +24,7 @@ devtools_module("common") {
     "JavaScriptMetaData.ts",
     "Lazy.ts",
     "Linkifier.ts",
+    "MapWithDefault.ts",
     "Mutex.ts",
     "Object.ts",
     "ParsedURL.ts",
@@ -83,6 +84,7 @@ ts_library("unittests") {
     "Debouncer.test.ts",
     "EventTarget.test.ts",
     "Lazy.test.ts",
+    "MapWithDefault.test.ts",
     "Mutex.test.ts",
     "Object.test.ts",
     "ParsedURL.test.ts",
