[RPP] Add DOM size insight model
This initial version of the insight does not include any DOM stats
since that data isn't in the trace yet. However, the passing
conditions used and highlighted events are expected to be final.

Bug: 372897811
Change-Id: I10e49d0eec6705cf29b0dd86460ed3b4831789c6
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6072709
Reviewed-by: Connor Clark <cjamcl@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Adam Raine <asraine@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1093,6 +1093,7 @@ grd_files_debug_sources = [
   "front_end/models/trace/helpers/TreeHelpers.js",
   "front_end/models/trace/insights/CLSCulprits.js",
   "front_end/models/trace/insights/Common.js",
+  "front_end/models/trace/insights/DOMSize.js",
   "front_end/models/trace/insights/DocumentLatency.js",
   "front_end/models/trace/insights/FontDisplay.js",
   "front_end/models/trace/insights/ImageDelivery.js",
