Add wicg scheduling API definition
window.scheduler.postTask and .yield are originally not available in the devtools-frontend codebase. This CL added the type definition so Typescript recognizes the API

Bug: 383240467
Change-Id: I4a395aca4e3956ceaa08053dcded5017f0ed10b1
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6081857
Reviewed-by: Robert Paveza <Rob.Paveza@microsoft.com>
Commit-Queue: Jayson Chen <jaysonchen@microsoft.com>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/rimraf": "3.0.2",
     "@types/sinon": "17.0.3",
     "@types/webidl2": "23.13.6",
+    "@types/wicg-task-scheduling": "2024.1.0",
     "@typescript-eslint/eslint-plugin": "7.18.0",
     "@typescript-eslint/parser": "7.18.0",
     "@web/rollup-plugin-import-meta-assets": "2.2.1",
