--- a/front_end/panels/network/BUILD.gn
+++ b/front_end/panels/network/BUILD.gn
@@ -162,6 +162,7 @@ ts_library("unittests") {
     ":bundle",
     ":meta",
     "../../core/common:bundle",
+    "../../core/i18n:bundle",
     "../../core/platform:bundle",
     "../../core/sdk:bundle",
     "../../generated:protocol",
