[GM3Restyling] Update What's new Panel
Before: https://i.imgur.com/wNFNuxA.png
After: https://i.imgur.com/7i8c5Ub.png
Bug: 325441858
Change-Id: I6d0b9c1613d1c0766c04b535f027714769c1b2da
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6084417
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Danil Somsikov <dsv@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -274,7 +274,7 @@ grd_files_release_sources = [
   "front_end/Images/warning-filled.svg",
   "front_end/Images/warning.svg",
   "front_end/Images/watch.svg",
-  "front_end/Images/whatsnew.avif",
+  "front_end/Images/whatsnew.svg",
   "front_end/Images/width.svg",
   "front_end/Images/zoom-in.svg",
   "front_end/Tests.js",
@@ -654,7 +654,6 @@ grd_files_release_sources = [
   "front_end/panels/webauthn/webauthn-meta.js",
   "front_end/panels/webauthn/webauthn.js",
   "front_end/panels/whats_new/resources/WNDT.md",
-  "front_end/panels/whats_new/resources/whatsnew.avif",
   "front_end/panels/whats_new/whats_new-meta.js",
   "front_end/panels/whats_new/whats_new.js",
   "front_end/rehydrated_devtools_app.html",
