--- a/front_end/panels/whats_new/resources/BUILD.gn
+++ b/front_end/panels/whats_new/resources/BUILD.gn
@@ -5,10 +5,7 @@
 import("../../../../scripts/build/ninja/copy.gni")
 
 copy_to_gen("resources-gen") {
-  sources = [
-    "WNDT.md",
-    "whatsnew.avif",
-  ]
+  sources = [ "WNDT.md" ]
 }
 
 group("whats_new_resources") {
