Ensure all emulated Chrome UAs use up-to-date major version
Bug:376599410,40281049,41158407
Change-Id: I1bb14367088b3bfa959cbe02b13971a848697721
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6089911
Commit-Queue: Paul Irish <paulirish@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/network/BUILD.gn
+++ b/front_end/panels/network/BUILD.gn
@@ -144,6 +144,7 @@ ts_library("unittests") {
 
   sources = [
     "BlockedURLsPane.test.ts",
+    "NetworkConfigView.test.ts",
     "NetworkDataGridNode.test.ts",
     "NetworkItemView.test.ts",
     "NetworkLogView.test.ts",
