[GM3Restyling] Update What's new to show multiple videos
This CL adds a `videoLinks` field to `ReleaseNotes` that can be used
to add video links to What's new.

Screenshot: https://i.imgur.com/2x7lIVY.png
Bug: 325441858
Change-Id: I16c8655b098d50c07a02b81f4720c494567654e5
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6088916
Reviewed-by: Danil Somsikov <dsv@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/config/gni/devtools_image_files.gni
+++ b/config/gni/devtools_image_files.gni
@@ -104,6 +104,8 @@ devtools_svg_sources = [
   "deployed.svg",
   "device-fold.svg",
   "devices.svg",
+  "devtools-thumbnail.svg",
+  "devtools-tips.svg",
   "devtools.svg",
   "dock-bottom.svg",
   "dock-left.svg",
