--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -102,6 +102,8 @@ grd_files_release_sources = [
   "front_end/Images/deployed.svg",
   "front_end/Images/device-fold.svg",
   "front_end/Images/devices.svg",
+  "front_end/Images/devtools-thumbnail.svg",
+  "front_end/Images/devtools-tips.svg",
   "front_end/Images/devtools.svg",
   "front_end/Images/dock-bottom.svg",
   "front_end/Images/dock-left.svg",
