[Elements] Move tracking computed style updates for node to model
also:
* Enables tracking computed style updates when Styles tab is shown
and DevToolsAnimationStylesInStyles tab flag is enabled.
* Separated CSS_MODEL_CHANGED and COMPUTED_STYLE_CHANGED events
and only emits COMPUTED_STYLE_CHANGED event when the computed
styles are changed. This way we don't trigger re-render in
Styles tab yet and keep the re-rendering behavior for MetricsWidget
and ComputedStylesWidget.

Bug: 349566291
Change-Id: I52c6e9fdc3dae8a7bae0c8c98be90a43186f48d7
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6088054
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Changhao Han <changhaohan@chromium.org>
Commit-Queue: Changhao Han <changhaohan@chromium.org>

--- a/front_end/panels/elements/BUILD.gn
+++ b/front_end/panels/elements/BUILD.gn
@@ -155,7 +155,7 @@ ts_library("unittests") {
     "AccessibilityTreeView.test.ts",
     "CSSRuleValidator.test.ts",
     "ClassesPaneWidget.test.ts",
-    "ComputedStyleWidget.test.ts",
+    "ComputedStyleModel.test.ts",
     "DOMLinkifier.test.ts",
     "ElementStatePaneWidget.test.ts",
     "ElementsPanel.test.ts",
