[RPP] Sort insights by estimated savings and field data
See go/cpq:enhance-trace-crux

Bug: 368135130
Change-Id: I86e4da9ca0d1e888ac9283045cb3130dfac210dc
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6088178
Commit-Queue: Connor Clark <cjamcl@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/front_end/models/trace/insights/BUILD.gn
+++ b/front_end/models/trace/insights/BUILD.gn
@@ -20,6 +20,7 @@ devtools_module("insights") {
     "Models.ts",
     "RenderBlocking.ts",
     "SlowCSSSelector.ts",
+    "Statistics.ts",
     "ThirdParties.ts",
     "Viewport.ts",
     "types.ts",
