[RPP] Add DOM size insight component to experimental insights
https://screenshot.googleplex.com/BmX2qvJFKCsgcLE

Bug: 372897811
Change-Id: I42007408c57a806fde1d379c1fbd004fd123e273
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6090118
Commit-Queue: Adam Raine <asraine@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>
Reviewed-by: Connor Clark <cjamcl@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1846,6 +1846,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/ignoreListSetting.css.js",
   "front_end/panels/timeline/components/insights/BaseInsightComponent.js",
   "front_end/panels/timeline/components/insights/CLSCulprits.js",
+  "front_end/panels/timeline/components/insights/DOMSize.js",
   "front_end/panels/timeline/components/insights/DocumentLatency.js",
   "front_end/panels/timeline/components/insights/EventRef.js",
   "front_end/panels/timeline/components/insights/FontDisplay.js",
