--- a/front_end/panels/timeline/utils/BUILD.gn
+++ b/front_end/panels/timeline/utils/BUILD.gn
@@ -8,6 +8,7 @@ import("../../../../scripts/build/ninja/devtools_module.gni")
 devtools_module("utils") {
   sources = [
     "AICallTree.ts",
+    "EntityMapper.ts",
     "EntryName.ts",
     "EntryStyles.ts",
     "Helpers.ts",
@@ -59,6 +60,7 @@ ts_library("unittests") {
 
   sources = [
     "AICallTree.test.ts",
+    "EntityMapper.test.ts",
     "EntryName.test.ts",
     "Helpers.test.ts",
     "IgnoreList.test.ts",
